cmake_minimum_required(VERSION 3.26)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable(C
        DataStructure/150.c
        DataStructure/35.c
        DataStructure/60.c
        DataStructure/62.c
        DataStructure/Joseph.c
        DataStructure/yiyuan.c
        DiscreteMathematics/Cpp1.cpp
        DiscreteMathematics/DMexp.c
        DiscreteMathematics/exp1.c
        DiscreteMathematics/exp2.c
        DiscreteMathematics/exp_connectivity.c
        DiscreteMathematics/exp_connectivity.cpp
        DiscreteMathematics/tempCodeRunnerFile.c
        DiscreteMathematics/Untitled-1.c
        DiscreteMathematics/Untitled-1.cpp
        programDesign/HighAccuracyCalculate/High_Accuracy_Calculate.c
        programDesign/HighAccuracyCalculate/High_Accuracy_Calculate11111111111.c
        programDesign/LibrarySystem/LibrarySystem.c
        programDesign/RLE/RLE.c
        programDesign/RLE/RLE_test.c
        programDesign/StackSimulation/Stack_Simulation.c
        programDesign/StackSimulation/StackSimulation.c
        programDesign/Zoom/ZoomBMP.c
        programDesign/Zoom/ZoomTest.c
        Temp.c)
